--- a/index.html
+++ b/index.html
@@ -3,45 +3,281 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>社交食谱墙 - 正式版</title>
+    <title>zizi食谱</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        :root { --primary: #10b981; --bg: #f3f4f6; }
-        body { font-family: -apple-system, sans-serif; margin: 0; background: var(--bg); padding-bottom: 80px; }
-        header { background: white; padding: 15px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 1px 3px rgba(0,0,0,0.1); }
-        .tabs { display: flex; gap: 20px; }
-        .tab { cursor: pointer; padding: 5px 10px; color: #666; font-weight: bold; }
-        .tab.active { color: var(--primary); border-bottom: 3px solid var(--primary); }
-        #content-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(170px, 1fr)); gap: 12px; padding: 12px; }
-        .card { background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1); transition: 0.3s; }
-        .card:active { transform: scale(0.98); }
-        .card img { width: 100%; height: 180px; object-fit: cover; background: #e5e7eb; }
-        .card-info { padding: 10px; }
-        .card-title { font-size: 15px; font-weight: bold; color: #1f2937; margin-bottom: 4px; }
-        .card-author { font-size: 12px; color: #9ca3af; }
-        .fab { position: fixed; bottom: 25px; left: 50%; transform: translateX(-50%); background: var(--primary); color: white; border: none; border-radius: 50px; padding: 14px 30px; font-size: 16px; font-weight: bold; cursor: pointer; box-shadow: 0 10px 15px -3px rgba(16, 185, 129, 0.4); z-index: 99; }
-        .modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 1000; align-items: center; justify-content: center; backdrop-filter: blur(4px); }
-        .modal-content { background: white; padding: 24px; border-radius: 20px; width: 85%; max-width: 380px; }
-        input, textarea, select { width: 100%; margin: 10px 0; padding: 12px; border: 1px solid #e5e7eb; border-radius: 10px; font-size: 14px; outline: none; }
-        input:focus { border-color: var(--primary); }
-        .btn-group { display: flex; gap: 12px; margin-top: 20px; }
-        button { flex: 1; padding: 12px; border-radius: 10px; border: none; cursor: pointer; font-weight: bold; }
-        .btn-main { background: var(--primary); color: white; }
-        .btn-cancel { background: #f3f4f6; color: #4b5563; }
-        #loading { text-align: center; padding: 50px; color: #9ca3af; }
+        .recipe-card { display: flex; gap: 16px; background: white; padding: 20px; border-radius: 20px; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.05); align-items: flex-start; position: relative; margin-bottom: 20px; border: 1px solid #f0f0f0; cursor: pointer; transition: transform 0.2s; }
+        .recipe-card:hover { transform: translateY(-3px); box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1); }
+        .recipe-info { flex: 1; min-width: 0; }
+        .recipe-thumb { width: 100px; height: 100px; border-radius: 16px; object-fit: cover; background: #f9fafb; flex-shrink: 0; border: 1px solid #eee; }
+        .del-btn { position: absolute; top: 12px; right: 12px; background: #fee2e2; color: #ef4444; width: 28px; height: 28px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 14px; cursor: pointer; z-index: 20; }
+        #post-modal input, #post-modal textarea { width: 100%; margin-bottom: 12px; padding: 14px; border-radius: 12px; border: 1px solid #e5e7eb; background: #f9fafb; outline: none; }
     </style>
 </head>
-<body>
+<body class="bg-[#fafafa] min-h-screen pb-24 text-gray-900">
 
-<header>
-    <div style="font-size: 18px; font-weight: 900; color: var(--primary);">🥣 社交食谱</div>
-    <div class="tabs">
-        <div class="tab active" id="tab-recipe" onclick="switchTab('recipe')">食谱</div>
-        <div class="tab" id="tab-moment" onclick="switchTab('moment')">瞬间</div>
+    <header class="sticky top-0 z-30 bg-white/80 backdrop-blur-md border-b px-6 py-4 flex justify-between items-center">
+        <h1 class="text-xl font-black text-emerald-600">🥘 zizi食谱</h1>
+        <button id="auth-btn" class="text-xs font-bold bg-emerald-600 text-white px-4 py-2 rounded-full shadow-md">注册/登录</button>
+    </header>
+
+    <main id="recipe-list" class="p-6 max-w-2xl mx-auto">
+        <div class="text-center py-20 text-gray-300">正在从云端加载美食...</div>
+    </main>
+
+    <main id="user-profile" class="p-6 max-w-2xl mx-auto hidden">
+        <div class="bg-white rounded-3xl p-8 mb-8 text-center shadow-sm border border-gray-100">
+            <div class="w-20 h-20 bg-emerald-100 text-emerald-600 rounded-full flex items-center justify-center text-3xl font-black mx-auto mb-4" id="user-avatar">?</div>
+            <h2 id="profile-name" class="text-xl font-black text-gray-800 mb-1">未登录</h2>
+            <p id="profile-stats" class="text-xs text-gray-400 font-medium">共发布 0 篇食谱</p>
+        </div>
+        <h3 class="font-black text-gray-800 mb-4 flex items-center text-sm"><span class="mr-2">🖼️</span> 我的作品</h3>
+        <div id="my-recipe-list" class="space-y-4"></div>
+    </main>
+
+    <main id="moment-feed" class="p-4 max-w-2xl mx-auto hidden">
+        <div class="mb-6">
+            <h2 class="text-2xl font-black text-gray-800">美食瞬间</h2>
+            <p class="text-xs text-gray-400">看看大家今天都做了什么好吃的</p>
+        </div>
+        <div id="moment-list" class="grid grid-cols-2 gap-3"></div>
+    </main>
+
+    <nav class="fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur-lg border-t p-4 flex justify-around items-center shadow-2xl z-40">
+        <button onclick="openHome()" class="text-2xl">🏠</button>
+        <button onclick="openMoment()" class="text-2xl">📸</button>
+        <button onclick="openPost()" class="bg-emerald-500 text-white w-14 h-14 rounded-2xl flex items-center justify-center shadow-lg -mt-10 border-4 border-white active:scale-90 transition-transform">
+            <span class="text-3xl">+</span>
+        </button>
+        <button onclick="openUserProfile()" class="text-2xl">👤</button>
+    </nav>
+
+    <div id="auth-modal" class="fixed inset-0 bg-black/60 hidden z-50 flex items-center justify-center p-6 backdrop-blur-sm">
+        <div class="bg-white w-full max-w-sm rounded-3xl p-8">
+            <h2 id="auth-title" class="text-2xl font-black mb-6">欢迎回来</h2>
+            <input id="auth-user" class="w-full mb-3 p-4 border rounded-xl" type="text" placeholder="你的名字">
+            <input id="auth-pwd" class="w-full mb-3 p-4 border rounded-xl" type="password" placeholder="密码">
+            <button onclick="handleAuth()" id="auth-submit" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black">确认</button>
+            <p class="mt-4 text-center text-xs text-gray-400">
+                <button onclick="toggleAuthMode()" id="auth-toggle-btn" class="underline">没有账号？点击注册</button>
+            </p>
+            <button onclick="closeAuth()" class="w-full mt-4 text-gray-300 text-[10px] font-bold">暂时离开</button>
+        </div>
     </div>
-    <div id="user-status" style="font-size: 12px; color: #374151; background: #ecfdf5; padding: 4px 8px; border-radius: 6px; cursor: pointer;" onclick="openAuth()">未登录</div>
-</header>
 
-<div id="content-grid"></div>
+    <div id="post-modal" class="fixed inset-0 bg-black/60 hidden z-50 flex items-center justify-center p-6 backdrop-blur-sm">
+        <div class="bg-white w-full max-w-md rounded-3xl p-8">
+            <h2 class="text-xl font-black mb-6">分享我的独家美食</h2>
+            <input id="in-title" type="text" placeholder="食谱名称">
+            <textarea id="in-notes" placeholder="制作步骤和心得..." class="h-32 resize-none"></textarea>
+            <div class="mb-6">
+                <label class="block text-[10px] text-gray-400 font-black mb-2 uppercase">上传成品图片</label>
+                <input id="in-file" type="file" accept="image/*" class="text-xs">
+            </div>
+            <div class="flex gap-4">
+                <button onclick="closePost()" class="flex-1 py-4 text-gray-400 font-bold">取消</button>
+                <button id="pub-btn" onclick="publish()" class="flex-1 py-4 bg-emerald-600 text-white rounded-2xl font-black shadow-lg">确认发布</button>
+            </div>
+        </div>
+    </div>
 
-<button class="fab" onclick="openPost()">
+    <div id="detail-modal" class="fixed inset-0 bg-black/70 hidden z-[60] flex items-center justify-center p-4 backdrop-blur-md">
+        <div class="bg-white w-full max-w-lg rounded-3xl overflow-hidden shadow-2xl relative max-h-[90vh] flex flex-col">
+            <button onclick="closeDetail()" class="absolute top-4 right-4 bg-black/40 text-white w-10 h-10 rounded-full z-10">✕</button>
+            <div class="overflow-y-auto">
+                <img id="detail-img" class="w-full h-72 object-cover bg-gray-100" src="">
+                <div class="p-8">
+                    <div class="flex justify-between items-start mb-4">
+                        <h2 id="detail-title" class="text-2xl font-black text-gray-800"></h2>
+                        <span id="detail-author" class="text-[10px] bg-emerald-50 text-emerald-600 px-3 py-1 rounded-full font-black"></span>
+                    </div>
+                    <hr class="border-gray-100 mb-6">
+                    <div id="detail-notes" class="text-gray-600 leading-loose whitespace-pre-wrap text-sm"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        // 核心配置 - 使用你刚才提供的完整 eyJh... Key
+        const SB_URL = "https://kmsbrisiajtykflnskpj.supabase.co";
+        const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imttc2JyaXNpYWp0eWtmbG5za3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwODM2NzIsImV4cCI6MjA4NzY1OTY3Mn0.e8-qaJpmrGVc_GcWVEBHEUHWWiJ40Ax5BMyWTZsGqbE";
+        const _client = supabase.createClient(SB_URL, SB_KEY);
+
+        let currentUser = null;
+        let isSignUp = false;
+
+        // 初始化：监听登录状态
+        _client.auth.onAuthStateChange((event, session) => {
+            currentUser = session?.user || null;
+            const btn = document.getElementById('auth-btn');
+            if (currentUser) {
+                btn.innerText = `登出 (${currentUser.email.split('@')[0]})`;
+                btn.onclick = () => _client.auth.signOut().then(() => location.reload());
+            } else {
+                btn.innerText = "注册/登录";
+                btn.onclick = openAuth;
+            }
+            fetchRecipes();
+        });
+
+        // 导航切换逻辑
+        function openHome() {
+            document.getElementById('recipe-list').classList.remove('hidden');
+            document.getElementById('user-profile').classList.add('hidden');
+            document.getElementById('moment-feed').classList.add('hidden');
+            fetchRecipes();
+        }
+
+        function openMoment() {
+            document.getElementById('recipe-list').classList.add('hidden');
+            document.getElementById('user-profile').classList.add('hidden');
+            document.getElementById('moment-feed').classList.remove('hidden');
+            fetchMoments();
+        }
+
+        async function openUserProfile() {
+            if (!currentUser) return openAuth();
+            document.getElementById('recipe-list').classList.add('hidden');
+            document.getElementById('moment-feed').classList.add('hidden');
+            document.getElementById('user-profile').classList.remove('hidden');
+
+            const userName = currentUser.email.split('@')[0];
+            document.getElementById('profile-name').innerText = userName;
+            document.getElementById('user-avatar').innerText = userName.charAt(0).toUpperCase();
+            fetchMyRecipes();
+        }
+
+        // 数据抓取逻辑
+        async function fetchRecipes() {
+            const list = document.getElementById('recipe-list');
+            const { data, error } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
+            if (error || !data || data.length === 0) {
+                list.innerHTML = `<div class="py-20 text-center text-gray-300 italic">还没有菜谱，快去发布一个吧！</div>`;
+                return;
+            }
+            list.innerHTML = data.map(i => {
+                const dataStr = JSON.stringify(i).replace(/"/g, '&quot;');
+                return `
+                <div class="recipe-card" onclick="showDetail(${dataStr})">
+                    ${currentUser && i.created_by === currentUser.id ? `<div class="del-btn" onclick="event.stopPropagation(); del('${i.id}')">✕</div>` : ''}
+                    <div class="recipe-info">
+                        <h3 class="font-black text-gray-800 text-lg mb-2 line-clamp-1">${i.title}</h3>
+                        <p class="text-xs text-gray-400 leading-relaxed line-clamp-2">${i.notes || '暂无详细步骤'}</p>
+                        <div class="mt-4"><span class="text-[10px] bg-emerald-50 text-emerald-600 px-3 py-1 rounded-full font-black">@${i.author}</span></div>
+                    </div>
+                    <img src="${i.image_url}" class="recipe-thumb" onerror="this.src='https://via.placeholder.com/150?text=图片加载失败'">
+                </div>`;
+            }).join('');
+        }
+
+        async function fetchMoments() {
+            const list = document.getElementById('moment-list');
+            const { data, error } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
+            if (error || !data) return;
+            list.innerHTML = data.map(i => `
+                <div class="relative group overflow-hidden rounded-2xl aspect-[3/4] bg-gray-100 shadow-sm" onclick='showDetail(${JSON.stringify(i).replace(/"/g, "&quot;")})'>
+                    <img src="${i.image_url}" class="w-full h-full object-cover">
+                    <div class="absolute bottom-0 left-0 right-0 p-3 bg-gradient-to-t from-black/60 to-transparent">
+                        <p class="text-white text-[10px] font-bold">@${i.author}</p>
+                    </div>
+                </div>
+            `).join('');
+        }
+
+        async function fetchMyRecipes() {
+            const list = document.getElementById('my-recipe-list');
+            const { data, error } = await _client.from('recipes').select('*').eq('created_by', currentUser.id).order('created_at', { ascending: false });
+            document.getElementById('profile-stats').innerText = `共发布 ${data?.length || 0} 篇食谱`;
+            if (error || !data || data.length === 0) {
+                list.innerHTML = `<div class="py-10 text-center text-gray-300 italic text-xs">还没有作品，快去发布吧！</div>`;
+                return;
+            }
+            list.innerHTML = data.map(i => `
+                <div class="recipe-card" onclick='showDetail(${JSON.stringify(i).replace(/"/g, "&quot;")})'>
+                    <div class="del-btn" onclick="event.stopPropagation(); del('${i.id}')">✕</div>
+                    <div class="recipe-info">
+                        <h3 class="font-black text-gray-800 text-md mb-2 line-clamp-1">${i.title}</h3>
+                        <p class="text-[10px] text-gray-400 leading-relaxed line-clamp-2">${i.notes || '无描述'}</p>
+                    </div>
+                    <img src="${i.image_url}" class="recipe-thumb !w-16 !h-16">
+                </div>`).join('');
+        }
+
+        // 业务逻辑
+        async function handleAuth() {
+            const user = document.getElementById('auth-user').value.trim();
+            const pwd = document.getElementById('auth-pwd').value.trim();
+            if (user.length < 3) return alert("名字至少要3个字哦");
+            const email = `${user}@rose.com`;
+            try {
+                if (isSignUp) {
+                    const { error } = await _client.auth.signUp({ email, password: pwd });
+                    if (error) throw error;
+                    alert("注册成功，现在去登录吧！");
+                    toggleAuthMode();
+                } else {
+                    const { error } = await _client.auth.signInWithPassword({ email, password: pwd });
+                    if (error) throw new Error("名字或密码不对哦");
+                    closeAuth();
+                }
+            } catch (e) { alert(e.message); }
+        }
+
+        async function publish() {
+            if (!currentUser) return openAuth();
+            const title = document.getElementById('in-title').value.trim();
+            const notes = document.getElementById('in-notes').value.trim();
+            const file = document.getElementById('in-file').files[0];
+            if (!title || !file) return alert("请填写标题并上传图片");
+
+            const btn = document.getElementById('pub-btn');
+            btn.disabled = true; btn.innerText = "上传中...";
+
+            try {
+                const fileExt = file.name.split('.').pop();
+                const path = `public/${Date.now()}_${Math.random().toString(36).substr(2, 5)}.${fileExt}`;
+                const { error: upErr } = await _client.storage.from('recipe-images').upload(path, file);
+                if (upErr) throw upErr;
+                const { data } = _client.storage.from('recipe-images').getPublicUrl(path);
+                const { error: dbErr } = await _client.from('recipes').insert([{
+                    title, notes, image_url: data.publicUrl, 
+                    author: currentUser.email.split('@')[0], 
+                    created_by: currentUser.id
+                }]);
+                if (dbErr) throw dbErr;
+                alert("发布成功！");
+                closePost();
+                openHome();
+            } catch (e) { alert("发布失败: " + e.message); }
+            finally { btn.disabled = false; btn.innerText = "确认发布"; }
+        }
+
+        async function del(id) {
+            if (!confirm("确定要删除吗？")) return;
+            await _client.from('recipes').delete().eq('id', id);
+            fetchRecipes(); fetchMyRecipes();
+        }
+
+        // 基础弹窗控制
+        function toggleAuthMode() { 
+            isSignUp = !isSignUp; 
+            document.getElementById('auth-title').innerText = isSignUp ? "新厨师注册" : "欢迎回来";
+            document.getElementById('auth-toggle-btn').innerText = isSignUp ? "已有账号？去登录" : "没有账号？点击注册";
+        }
+        function openAuth() { document.getElementById('auth-modal').classList.remove('hidden'); }
+        function closeAuth() { document.getElementById('auth-modal').classList.add('hidden'); }
+        function openPost() { if(!currentUser) openAuth(); else document.getElementById('post-modal').classList.remove('hidden'); }
+        function closePost() { document.getElementById('post-modal').classList.add('hidden'); }
+        function showDetail(recipe) {
+            document.getElementById('detail-img').src = recipe.image_url;
+            document.getElementById('detail-title').innerText = recipe.title;
+            document.getElementById('detail-author').innerText = `@${recipe.author}`;
+            document.getElementById('detail-notes').innerText = recipe.notes || "暂无详细心得~";
+            document.getElementById('detail-modal').classList.remove('hidden');
+        }
+        function closeDetail() { document.getElementById('detail-modal').classList.add('hidden'); }
+    </script>
+</body>
+</html>
