--- a/index.html
+++ b/index.html
@@ -3,86 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>zizi食谱 - 完美修复版</title>
+    <title>zizi食谱 - 终极稳定版</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .recipe-card { display: flex; gap: 16px; background: white; padding: 20px; border-radius: 20px; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.05); align-items: flex-start; position: relative; margin-bottom: 20px; border: 1px solid #f0f0f0; cursor: pointer; transition: transform 0.2s; }
-        .recipe-card:hover { transform: translateY(-3px); }
-        .recipe-info { flex: 1; min-width: 0; }
-        .recipe-thumb { width: 100px; height: 100px; border-radius: 16px; object-fit: cover; background: #f9fafb; flex-shrink: 0; border: 1px solid #eee; }
-        #post-modal input, #post-modal textarea, #post-modal select, #auth-modal input { width: 100%; margin-bottom: 12px; padding: 14px; border-radius: 12px; border: 1px solid #e5e7eb; background: #f9fafb; outline: none; }
+        .recipe-card { display: flex; gap: 16px; background: white; padding: 20px; border-radius: 20px; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.05); align-items: flex-start; margin-bottom: 20px; border: 1px solid #f0f0f0; cursor: pointer; }
+        .recipe-thumb { width: 100px; height: 100px; border-radius: 16px; object-fit: cover; background: #f9fafb; flex-shrink: 0; }
+        #post-modal input, #post-modal textarea, #post-modal select, #auth-modal input { width: 100%; margin-bottom: 12px; padding: 14px; border-radius: 12px; border: 1px solid #e5e7eb; background: #f9fafb; outline: none; display: block; }
+        .hidden { display: none !important; }
     </style>
 </head>
 <body class="bg-[#fafafa] min-h-screen pb-24 text-gray-900">
 
     <header class="sticky top-0 z-30 bg-white/80 backdrop-blur-md border-b px-6 py-4 flex justify-between items-center">
         <h1 class="text-xl font-black text-emerald-600">🥘 zizi食谱</h1>
-        <button id="auth-btn" onclick="openAuth()" class="text-xs font-bold bg-emerald-600 text-white px-4 py-2 rounded-full shadow-md">注册/登录</button>
+        <button id="auth-btn" class="text-xs font-bold bg-emerald-600 text-white px-4 py-2 rounded-full shadow-md">加载中...</button>
     </header>
 
     <main id="recipe-list" class="p-6 max-w-2xl mx-auto">
         <h2 class="text-2xl font-black text-gray-800 mb-6">推荐菜谱</h2>
-        <div id="recipe-container" class="space-y-4">
-            <div class="text-center py-20 text-gray-300">正在同步云端美食...</div>
-        </div>
+        <div id="recipe-container" class="space-y-4"></div>
     </main>
 
     <main id="moment-feed" class="p-4 max-w-2xl mx-auto hidden">
-        <div class="mb-6">
-            <h2 class="text-2xl font-black text-gray-800">美食瞬间</h2>
-            <p class="text-xs text-gray-400">分享生活里的美味瞬间</p>
-        </div>
+        <h2 class="text-2xl font-black text-gray-800 mb-6">美食瞬间</h2>
         <div id="moment-list" class="grid grid-cols-2 gap-3"></div>
     </main>
 
     <nav class="fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur-lg border-t p-4 flex justify-around items-center shadow-2xl z-40">
-        <button onclick="openHome()" class="text-2xl">🏠</button>
-        <button onclick="openMoment()" class="text-2xl">📸</button>
-        <button onclick="openPost()" class="bg-emerald-500 text-white w-14 h-14 rounded-2xl flex items-center justify-center shadow-lg -mt-10 border-4 border-white active:scale-90 transition-transform">
+        <button onclick="navTo('home')" class="text-2xl">🏠</button>
+        <button onclick="navTo('moment')" class="text-2xl">📸</button>
+        <button onclick="handlePostClick()" class="bg-emerald-500 text-white w-14 h-14 rounded-2xl flex items-center justify-center shadow-lg -mt-10 border-4 border-white">
             <span class="text-3xl">+</span>
         </button>
         <button onclick="location.reload()" class="text-2xl">👤</button>
     </nav>
 
     <div id="auth-modal" class="fixed inset-0 bg-black/60 hidden z-50 flex items-center justify-center p-6 backdrop-blur-sm">
-        <div class="bg-white w-full max-w-sm rounded-3xl p-8">
+        <div class="bg-white w-full max-w-sm rounded-3xl p-8 shadow-2xl">
             <h2 id="auth-title" class="text-2xl font-black mb-6">欢迎回来</h2>
             <input id="auth-user" type="text" placeholder="你的名字">
-            <input id="auth-pwd" type="password" placeholder="密码">
-            <button onclick="handleAuth()" id="auth-submit" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black">确认</button>
+            <input id="auth-pwd" type="password" placeholder="密码 (至少6位)">
+            <button id="auth-submit-btn" class="w-full py-4 bg-emerald-600 text-white rounded-2xl font-black">确认</button>
             <p class="mt-4 text-center text-xs text-gray-400">
-                <button onclick="toggleAuthMode()" id="auth-toggle-btn" class="underline">没有账号？点击注册</button>
+                <button id="auth-toggle-btn" class="underline">没有账号？点击注册</button>
             </p>
-            <button onclick="closeAuth()" class="w-full mt-4 text-gray-300 text-[10px] font-bold">暂时离开</button>
+            <button onclick="closeModal('auth-modal')" class="w-full mt-4 text-gray-300 text-[10px] font-bold">暂时离开</button>
         </div>
     </div>
 
     <div id="post-modal" class="fixed inset-0 bg-black/60 hidden z-50 flex items-center justify-center p-6 backdrop-blur-sm">
         <div class="bg-white w-full max-w-md rounded-3xl p-8 shadow-2xl">
-            <h2 class="text-xl font-black mb-6">发布我的美食</h2>
+            <h2 class="text-xl font-black mb-6">分享美食</h2>
             <select id="post-type">
-                <option value="recipe">🥘 菜谱区</option>
-                <option value="moment">📸 瞬间区</option>
+                <option value="recipe">🥘 发布到：菜谱区</option>
+                <option value="moment">📸 发布到：瞬间区</option>
             </select>
-            <input id="in-title" type="text" placeholder="给它起个名字">
-            <textarea id="in-notes" placeholder="说点什么吧..." class="h-32 resize-none border border-gray-200 p-3 rounded-xl w-full mb-3"></textarea>
-            <input id="in-file" type="file" accept="image/*" class="text-xs mb-6">
-            <div class="flex gap-4">
-                <button onclick="closePost()" class="flex-1 py-4 text-gray-400 font-bold">取消</button>
-                <button id="pub-btn" onclick="publish()" class="flex-1 py-4 bg-emerald-600 text-white rounded-2xl font-black shadow-lg">确认发布</button>
+            <input id="in-title" type="text" placeholder="标题">
+            <textarea id="in-notes" placeholder="写下你的心情或步骤..." class="w-full h-32 border border-gray-100 rounded-xl p-3 mb-3 outline-none bg-gray-50"></textarea>
+            <input id="in-file" type="file" accept="image/*">
+            <div class="flex gap-4 mt-4">
+                <button onclick="closeModal('post-modal')" class="flex-1 py-4 text-gray-400 font-bold">取消</button>
+                <button id="pub-btn" class="flex-1 py-4 bg-emerald-600 text-white rounded-2xl font-black">发布</button>
             </div>
         </div>
     </div>
 
     <script>
+        // 1. 初始化配置
         const SB_URL = "https://kmsbrisiajtykflnskpj.supabase.co";
         const SB_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imttc2JyaXNpYWp0eWtmbG5za3BqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzIwODM2NzIsImV4cCI6MjA4NzY1OTY3Mn0.e8-qaJpmrGVc_GcWVEBHEUHWWiJ40Ax5BMyWTZsGqbE";
-        const _client = supabase.createClient(SB_URL, SB_KEY);
+        
+        let _client;
+        try {
+            _client = supabase.createClient(SB_URL, SB_KEY);
+        } catch(e) {
+            alert("SDK 加载失败，请检查网络并刷新！");
+        }
 
         let currentUser = null;
         let isSignUp = false;
 
+        // 2. 核心：登录状态监听 (决定右上角按钮显示什么)
         _client.auth.onAuthStateChange((event, session) => {
             currentUser = session?.user || null;
             const btn = document.getElementById('auth-btn');
@@ -91,97 +93,71 @@
                 btn.onclick = () => _client.auth.signOut().then(() => location.reload());
             } else {
                 btn.innerText = "注册/登录";
-                btn.onclick = openAuth;
+                btn.onclick = () => showModal('auth-modal');
             }
-            fetchRecipes();
+            fetchData();
         });
 
-        // 导航切换逻辑
-        function openHome() {
-            document.getElementById('recipe-list').classList.remove('hidden');
-            document.getElementById('moment-feed').classList.add('hidden');
-            fetchRecipes();
+        // 3. 导航逻辑
+        function navTo(target) {
+            document.getElementById('recipe-list').classList.toggle('hidden', target !== 'home');
+            document.getElementById('moment-feed').classList.toggle('hidden', target !== 'moment');
+            fetchData();
         }
 
-        function openMoment() {
-            document.getElementById('recipe-list').classList.add('hidden');
-            document.getElementById('moment-feed').classList.remove('hidden');
-            fetchMoments();
+        function handlePostClick() {
+            if(!currentUser) showModal('auth-modal');
+            else showModal('post-modal');
         }
 
-        // 数据拉取
-        async function fetchRecipes() {
-            const { data } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
-            const list = data?.filter(i => !i.type || i.type === 'recipe') || [];
-            document.getElementById('recipe-container').innerHTML = list.map(i => `
-                <div class="recipe-card">
-                    <div class="recipe-info">
-                        <h3 class="font-black text-gray-800 text-lg mb-2">${i.title}</h3>
-                        <p class="text-xs text-gray-400 line-clamp-2">${i.notes || ''}</p>
-                        <div class="mt-4"><span class="text-[10px] bg-emerald-50 text-emerald-600 px-3 py-1 rounded-full">@${i.author}</span></div>
-                    </div>
-                    <img src="${i.image_url}" class="recipe-thumb">
-                </div>
-            `).join('');
-        }
+        // 4. 弹窗控制
+        function showModal(id) { document.getElementById(id).classList.remove('hidden'); }
+        function closeModal(id) { document.getElementById(id).classList.add('hidden'); }
 
-        async function fetchMoments() {
-            const { data } = await _client.from('recipes').select('*').eq('type', 'moment').order('created_at', { ascending: false });
-            document.getElementById('moment-list').innerHTML = (data || []).map(i => `
-                <div class="rounded-2xl overflow-hidden aspect-[3/4] bg-gray-100 shadow-sm">
-                    <img src="${i.image_url}" class="w-full h-full object-cover">
-                </div>
-            `).join('');
-        }
-
-        // 【登录逻辑修复】
-        function openAuth() { document.getElementById('auth-modal').classList.remove('hidden'); }
-        function closeAuth() { document.getElementById('auth-modal').classList.add('hidden'); }
-        function toggleAuthMode() { 
-            isSignUp = !isSignUp; 
+        function toggleAuthMode() {
+            isSignUp = !isSignUp;
             document.getElementById('auth-title').innerText = isSignUp ? "新厨师注册" : "欢迎回来";
             document.getElementById('auth-toggle-btn').innerText = isSignUp ? "已有账号？去登录" : "没有账号？点击注册";
         }
 
+        // 5. 登录注册逻辑
         async function handleAuth() {
             const user = document.getElementById('auth-user').value.trim();
             const pwd = document.getElementById('auth-pwd').value.trim();
-            if (!user || pwd.length < 6) return alert("名字必填，密码至少6位哦");
-            const email = `${encodeURIComponent(user)}@rose.com`; // 处理中文名转义
+            if(!user || pwd.length < 6) return alert("名字必填，密码至少6位");
+
+            const email = `${encodeURIComponent(user)}@rose.com`;
             try {
-                if (isSignUp) {
+                if(isSignUp) {
                     const { error } = await _client.auth.signUp({ email, password: pwd });
-                    if (error) throw error;
-                    alert("注册成功！现在可以去登录了");
+                    if(error) throw error;
+                    alert("注册成功，请重新登录！");
                     toggleAuthMode();
                 } else {
                     const { error } = await _client.auth.signInWithPassword({ email, password: pwd });
-                    if (error) throw new Error("名字或密码不对哦");
-                    closeAuth();
+                    if(error) throw new Error("名字或密码错误");
+                    closeModal('auth-modal');
                 }
-            } catch (e) { alert(e.message); }
+            } catch(e) { alert(e.message); }
         }
 
-        // 发布逻辑
+        // 6. 发布逻辑
         async function publish() {
-            if (!currentUser) return openAuth();
             const title = document.getElementById('in-title').value.trim();
-            const notes = document.getElementById('in-notes').value.trim();
-            const type = document.getElementById('post-type').value;
             const file = document.getElementById('in-file').files[0];
+            const type = document.getElementById('post-type').value;
+            const notes = document.getElementById('in-notes').value.trim();
 
-            if (!title || !file) return alert("标题和图片是必填的哦");
+            if(!title || !file) return alert("请填写标题并选择图片");
 
             const btn = document.getElementById('pub-btn');
-            btn.disabled = true; btn.innerText = "正在飞往云端...";
+            btn.innerText = "发送中..."; btn.disabled = true;
 
             try {
-                const fileExt = file.name.split('.').pop();
-                const safeName = `${Date.now()}_${Math.random().toString(36).substr(2, 5)}.${fileExt}`;
+                const safeName = `${Date.now()}_${Math.random().toString(36).substr(2, 5)}`;
                 const path = `public/${safeName}`;
-
                 const { error: upErr } = await _client.storage.from('recipe-images').upload(path, file);
-                if (upErr) throw upErr;
+                if(upErr) throw upErr;
 
                 const { data: urlData } = _client.storage.from('recipe-images').getPublicUrl(path);
                 const { error: dbErr } = await _client.from('recipes').insert([{
@@ -190,14 +166,44 @@
                     author: currentUser.email.split('@')[0],
                     created_by: currentUser.id
                 }]);
+                if(dbErr) throw dbErr;
 
-                if (dbErr) throw dbErr;
-                alert("分享成功！");
-                closePost();
-                type === 'moment' ? openMoment() : openHome();
-            } catch (e) { alert("发布失败: " + e.message); }
-            finally { btn.disabled = false; btn.innerText = "确认发布"; }
+                alert("发布成功！");
+                closeModal('post-modal');
+                location.reload();
+            } catch(e) { alert(e.message); }
+            finally { btn.innerText = "发布"; btn.disabled = false; }
         }
 
-        function openPost() { if(!currentUser) openAuth(); else document.getElementById('post-modal').classList.remove('hidden'); }
-        function closePost() { document.getElementById('post-modal').classList.add('hidden');
+        // 7. 拉取数据
+        async function fetchData() {
+            const { data } = await _client.from('recipes').select('*').order('created_at', { ascending: false });
+            if(!data) return;
+
+            // 菜谱渲染
+            const recipes = data.filter(i => !i.type || i.type === 'recipe');
+            document.getElementById('recipe-container').innerHTML = recipes.map(i => `
+                <div class="recipe-card">
+                    <div class="flex-1 min-w-0">
+                        <h3 class="font-black text-gray-800 text-lg mb-2">${i.title}</h3>
+                        <p class="text-xs text-gray-400 line-clamp-2">${i.notes || ''}</p>
+                    </div>
+                    <img src="${i.image_url}" class="recipe-thumb">
+                </div>
+            `).join('');
+
+            // 瞬间渲染
+            const moments = data.filter(i => i.type === 'moment');
+            document.getElementById('moment-list').innerHTML = moments.map(i => `
+                <div class="rounded-2xl overflow-hidden aspect-[3/4] bg-gray-100"><img src="${i.image_url}" class="w-full h-full object-cover"></div>
+            `).join('');
+        }
+
+        // 8. 绑定事件 (替代直接在 HTML 写 onclick，更稳定)
+        document.getElementById('auth-submit-btn').addEventListener('click', handleAuth);
+        document.getElementById('auth-toggle-btn').addEventListener('click', toggleAuthMode);
+        document.getElementById('pub-btn').addEventListener('click', publish);
+
+    </script>
+</body>
+</html>
