--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
         .delete-btn:hover { background: #ff4d4f; color: white; transform: scale(1.1); }
         input, textarea, select { width: 100%; padding: 12px; border: 1px solid #e5e7eb; border-radius: 12px; margin-bottom: 12px; outline: none; background: #f9fafb; }
         .modal-overlay { background: rgba(0,0,0,0.6); backdrop-filter: blur(4px); }
+        /* 让滚动条变得优雅 */
+::-webkit-scrollbar { width: 5px; }
+::-webkit-scrollbar-thumb { background: #10b981; border-radius: 10px; }
+
+/* 卡片悬浮动画 */
+.recipe-card {
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.recipe-card:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+}
+
+/* 按钮点击特效 */
+.nav-btn-active {
+    position: relative;
+    color: #10b981;
+}
+.nav-btn-active::after {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 4px;
+    height: 4px;
+    background: #10b981;
+    border-radius: 50%;
+}
     </style>
 </head>
 <body class="bg-[#fafafa] min-h-screen pb-24 text-gray-900">
@@ -243,3 +272,4 @@
     </script>
 </body>
 </html>
+
